; ModuleID = '/home/carl/AnghaBench/redis/src/extr_util.c_memtoll.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_util.c_memtoll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"b\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"k\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"kb\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"m\00", align 1
@.str.4 = private unnamed_addr constant [3 x i8] c"mb\00", align 1
@.str.5 = private unnamed_addr constant [2 x i8] c"g\00", align 1
@.str.6 = private unnamed_addr constant [3 x i8] c"gb\00", align 1
@errno = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @memtoll(i8* %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca [128 x i8], align 16
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32*, i32** %5, align 8
  store i32 0, i32* %15, align 4
  br label %16

16:                                               ; preds = %14, %2
  %17 = load i8*, i8** %4, align 8
  store i8* %17, i8** %6, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load i8, i8* %18, align 1
  %20 = sext i8 %19 to i32
  %21 = icmp eq i32 %20, 45
  br i1 %21, label %22, label %25

22:                                               ; preds = %16
  %23 = load i8*, i8** %6, align 8
  %24 = getelementptr inbounds i8, i8* %23, i32 1
  store i8* %24, i8** %6, align 8
  br label %25

25:                                               ; preds = %22, %16
  br label %26

26:                                               ; preds = %38, %25
  %27 = load i8*, i8** %6, align 8
  %28 = load i8, i8* %27, align 1
  %29 = sext i8 %28 to i32
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %26
  %32 = load i8*, i8** %6, align 8
  %33 = load i8, i8* %32, align 1
  %34 = call i64 @isdigit(i8 signext %33)
  %35 = icmp ne i64 %34, 0
  br label %36

36:                                               ; preds = %31, %26
  %37 = phi i1 [ false, %26 ], [ %35, %31 ]
  br i1 %37, label %38, label %41

38:                                               ; preds = %36
  %39 = load i8*, i8** %6, align 8
  %40 = getelementptr inbounds i8, i8* %39, i32 1
  store i8* %40, i8** %6, align 8
  br label %26

41:                                               ; preds = %36
  %42 = load i8*, i8** %6, align 8
  %43 = load i8, i8* %42, align 1
  %44 = sext i8 %43 to i32
  %45 = icmp eq i32 %44, 0
  br i1 %45, label %50, label %46

46:                                               ; preds = %41
  %47 = load i8*, i8** %6, align 8
  %48 = call i32 @strcasecmp(i8* %47, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %51, label %50

50:                                               ; preds = %46, %41
  store i64 1, i64* %8, align 8
  br label %93

51:                                               ; preds = %46
  %52 = load i8*, i8** %6, align 8
  %53 = call i32 @strcasecmp(i8* %52, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %56, label %55

55:                                               ; preds = %51
  store i64 1000, i64* %8, align 8
  br label %92

56:                                               ; preds = %51
  %57 = load i8*, i8** %6, align 8
  %58 = call i32 @strcasecmp(i8* %57, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0))
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %61, label %60

60:                                               ; preds = %56
  store i64 1024, i64* %8, align 8
  br label %91

61:                                               ; preds = %56
  %62 = load i8*, i8** %6, align 8
  %63 = call i32 @strcasecmp(i8* %62, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  %64 = icmp ne i32 %63, 0
  br i1 %64, label %66, label %65

65:                                               ; preds = %61
  store i64 1000000, i64* %8, align 8
  br label %90

66:                                               ; preds = %61
  %67 = load i8*, i8** %6, align 8
  %68 = call i32 @strcasecmp(i8* %67, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0))
  %69 = icmp ne i32 %68, 0
  br i1 %69, label %71, label %70

70:                                               ; preds = %66
  store i64 1048576, i64* %8, align 8
  br label %89

71:                                               ; preds = %66
  %72 = load i8*, i8** %6, align 8
  %73 = call i32 @strcasecmp(i8* %72, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0))
  %74 = icmp ne i32 %73, 0
  br i1 %74, label %76, label %75

75:                                               ; preds = %71
  store i64 1000000000, i64* %8, align 8
  br label %88

76:                                               ; preds = %71
  %77 = load i8*, i8** %6, align 8
  %78 = call i32 @strcasecmp(i8* %77, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.6, i64 0, i64 0))
  %79 = icmp ne i32 %78, 0
  br i1 %79, label %81, label %80

80:                                               ; preds = %76
  store i64 1073741824, i64* %8, align 8
  br label %87

81:                                               ; preds = %76
  %82 = load i32*, i32** %5, align 8
  %83 = icmp ne i32* %82, null
  br i1 %83, label %84, label %86

84:                                               ; preds = %81
  %85 = load i32*, i32** %5, align 8
  store i32 1, i32* %85, align 4
  br label %86

86:                                               ; preds = %84, %81
  store i64 0, i64* %3, align 8
  br label %140

87:                                               ; preds = %80
  br label %88

88:                                               ; preds = %87, %75
  br label %89

89:                                               ; preds = %88, %70
  br label %90

90:                                               ; preds = %89, %65
  br label %91

91:                                               ; preds = %90, %60
  br label %92

92:                                               ; preds = %91, %55
  br label %93

93:                                               ; preds = %92, %50
  %94 = load i8*, i8** %6, align 8
  %95 = load i8*, i8** %4, align 8
  %96 = ptrtoint i8* %94 to i64
  %97 = ptrtoint i8* %95 to i64
  %98 = sub i64 %96, %97
  %99 = trunc i64 %98 to i32
  store i32 %99, i32* %10, align 4
  %100 = load i32, i32* %10, align 4
  %101 = zext i32 %100 to i64
  %102 = icmp uge i64 %101, 128
  br i1 %102, label %103, label %109

103:                                              ; preds = %93
  %104 = load i32*, i32** %5, align 8
  %105 = icmp ne i32* %104, null
  br i1 %105, label %106, label %108

106:                                              ; preds = %103
  %107 = load i32*, i32** %5, align 8
  store i32 1, i32* %107, align 4
  br label %108

108:                                              ; preds = %106, %103
  store i64 0, i64* %3, align 8
  br label %140

109:                                              ; preds = %93
  %110 = getelementptr inbounds [128 x i8], [128 x i8]* %7, i64 0, i64 0
  %111 = load i8*, i8** %4, align 8
  %112 = load i32, i32* %10, align 4
  %113 = call i32 @memcpy(i8* %110, i8* %111, i32 %112)
  %114 = load i32, i32* %10, align 4
  %115 = zext i32 %114 to i64
  %116 = getelementptr inbounds [128 x i8], [128 x i8]* %7, i64 0, i64 %115
  store i8 0, i8* %116, align 1
  store i64 0, i64* @errno, align 8
  %117 = getelementptr inbounds [128 x i8], [128 x i8]* %7, i64 0, i64 0
  %118 = call i64 @strtoll(i8* %117, i8** %11, i32 10)
  store i64 %118, i64* %9, align 8
  %119 = load i64, i64* %9, align 8
  %120 = icmp eq i64 %119, 0
  br i1 %120, label %121, label %125

121:                                              ; preds = %109
  %122 = load i64, i64* @errno, align 8
  %123 = load i64, i64* @EINVAL, align 8
  %124 = icmp eq i64 %122, %123
  br i1 %124, label %130, label %125

125:                                              ; preds = %121, %109
  %126 = load i8*, i8** %11, align 8
  %127 = load i8, i8* %126, align 1
  %128 = sext i8 %127 to i32
  %129 = icmp ne i32 %128, 0
  br i1 %129, label %130, label %136

130:                                              ; preds = %125, %121
  %131 = load i32*, i32** %5, align 8
  %132 = icmp ne i32* %131, null
  br i1 %132, label %133, label %135

133:                                              ; preds = %130
  %134 = load i32*, i32** %5, align 8
  store i32 1, i32* %134, align 4
  br label %135

135:                                              ; preds = %133, %130
  store i64 0, i64* %3, align 8
  br label %140

136:                                              ; preds = %125
  %137 = load i64, i64* %9, align 8
  %138 = load i64, i64* %8, align 8
  %139 = mul nsw i64 %137, %138
  store i64 %139, i64* %3, align 8
  br label %140

140:                                              ; preds = %136, %135, %108, %86
  %141 = load i64, i64* %3, align 8
  ret i64 %141
}

declare dso_local i64 @isdigit(i8 signext) #1

declare dso_local i32 @strcasecmp(i8*, i8*) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i64 @strtoll(i8*, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
